frontend/src/app/home/home.page.scss
ion-header ion-toolbar {
  // Looks better in Dark Mode.
  --background: transparent;
}

.toolbar-buttons {
  display: flex;
  flex-direction: column;
}
.toolbar-buttons button {
  padding: 0;
  margin: 10px;
  background: transparent;
  outline: none;
}
.toolbar-buttons button ion-icon {
  font-size: 40px;
  color: var(--ion-color-light-shade);
}
@media (prefers-color-scheme: dark) {
  .toolbar-buttons ion-icon {
    color: var(--ion-color-medium);
  }
}

.notification-button {
  position: relative;
}
.notifications-badge {
  background: var(--ion-color-secondary);
  color: var(--ion-color-secondary-contrast);
  position: absolute;
  top: -3px;
  right: -5px;
  border-radius: 1000px;
  font-size: 15px;
  font-weight: 700;
  line-height: 20px;
  min-width: 20px;
  padding-left: 4px;
  padding-right: 4px;
}

.container {
  padding: 1.5rem;
  max-width: 500px;
  margin-right: auto;
  margin-left: auto;
  display: flex;
  flex-direction: column;
  min-height: 100%;
}
.logo-and-message,
.button-container {
  flex-grow: 1;
  flex-direction: column;
  align-items: center;
  display: flex;
}
.logo-and-message {
  justify-content: center;
}
.button-container {
  justify-content: center;
}

h1 {
  font-weight: 400;
}
h3 {
  margin-top: 7px;
}
h1,
h3 {
  text-align: center;
}

.logo {
  margin-bottom: 1rem;
  height: 5rem;
}
.logo-triangles {
  fill: var(--ion-color-primary);
}
.logo-square {
  fill: var(--ion-color-secondary);
}

